# news-agent

./: .env.example  .gitignore  2026 Global AI Industry Report.md  CHANGELOG.md  CONTRIBUTING.md  README.md  example_prompt.md  pyproject.toml
docs/: ARCHITECTURE.md  CLI.md  COGNITION_DESIGN.md  COLLECTORS.md  CONFIGURATION.md  COST.md  HERMES_DESIGN.md  LLM_PROVIDERS.md  NEWS_AGENT_DESIGN.md  PERFORMANCE.md  PIPELINE.md  REPORT_QUALITY_REVIEW.md  SECURITY.md  STORAGE.md  TESTING.md
prompts/: ai_agents_coding.md  ai_companies_startups.md  ai_funding_ma.md  ai_hardware_infra.md  ai_industry_adoption.md  ai_multimodal_vision.md  ai_news_daily.md  ai_news_monthly.md  ai_news_weekly.md  ai_open_source_ecosystem.md  ai_regulation_policy.md  ai_research_papers.md  ai_safety_alignment.md  frontier_models.md
scheduler/: cron.txt  launchd.plist  systemd.service  systemd.timer
src/hermes/: __init__.py  __main__.py  cli.py  config.py  errors.py  logging.py  output.py  profiles.py
src/hermes/collectors/: blog.py  (+19 more)
src/newsagent/: __init__.py  __main__.py  cli.py  config.py  dedup.py  errors.py  output.py  profiles.py
tests/: conftest.py  helpers.py  test_orchestrator.py
tests/integration/: test_extended.py  test_news_run.py
tests/snapshots/: briefs.json
tests/unit/: test_briefs.py  test_cadence.py  test_cli.py  test_core.py  test_coverage.py  test_cross_post_dedup.py  test_embed.py  test_llm.py  test_new_collectors.py  test_orchestrator_observability.py  test_planner.py  test_quality.py  test_report.py  test_sanitizer.py  test_sinks.py  test_spec.py  test_synthesize.py
(+87 files in other folders)
