[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "newsagent"
version = "0.1.0"
description = "newsagent — autonomous AI Research Intelligence Agent"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "httpx>=0.27",
    "tenacity>=8.2",
    "jinja2>=3.1",
    "qdrant-client>=1.7",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
embed = ["sentence-transformers>=2.5"]
api = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.4", "mypy>=1.9"]

[project.scripts]
newsagent = "newsagent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
